// Schema definition for light client messages.

syntax = "proto2";

package api.v1.light;

// Enumerate all possible light client request messages.
message Request {
	oneof request {
		RemoteCallRequest remote_call_request = 1;
		RemoteReadRequest remote_read_request = 2;
		RemoteReadChildRequest remote_read_child_request = 4;
		// Note: ids 3 and 5 were used in the past. It would be preferable to not re-use them.
		RemoteReadRequestV2 remote_read_request_v2 = 6; // RFC-0009
	}
}

// Enumerate all possible light client response messages.
message Response {
	oneof response {
		RemoteCallResponse remote_call_response = 1;
		RemoteReadResponse remote_read_response = 2;
		// Note: ids 3 and 4 were used in the past. It would be preferable to not re-use them.
	}
}

// Remote call request.
message RemoteCallRequest {
	// Block at which to perform call.
	required bytes block = 2;
	// Method name.
	required string method = 3;
	// Call data.
	required bytes data = 4;
}

// Remote call response.
message RemoteCallResponse {
	// Execution proof. If missing, indicates that the remote couldn't answer, for example because
	// the block is pruned.
	optional bytes proof = 2;
}

// Remote storage read request.
message RemoteReadRequest {
	// Block at which to perform call.
	required bytes block = 2;
	// Storage keys.
	repeated bytes keys = 3;
}

// Remote read response.
message RemoteReadResponse {
	// Read proof. If missing, indicates that the remote couldn't answer, for example because
	// the block is pruned.
	optional bytes proof = 2;
}

// Remote storage read child request.
message RemoteReadChildRequest {
	// Block at which to perform call.
	required bytes block = 2;
	// Child Storage key, this is relative
	// to the child type storage location.
	required bytes storage_key = 3;
	// Storage keys.
	repeated bytes keys = 6;
}

// RFC-0009: Improved light client requests

// Child trie information for V2 requests.
message ChildTrieInfo {
	enum ChildTrieNamespace {
		DEFAULT = 1;
	}
	// Hash of the child trie root.
	required bytes hash = 1;
	// Namespace of the child trie.
	required ChildTrieNamespace namespace = 2;
}

// Key with options for V2 requests.
message Key {
	// Storage key.
	required bytes key = 1;
	// If true, return hash instead of value (for state_version=1 with values > 32 bytes).
	optional bool skip_value = 2;
	// If true, include all descendant keys under this prefix.
	optional bool include_descendants = 3;
}

// Remote storage read request V2 (RFC-0009).
message RemoteReadRequestV2 {
	// Block at which to perform the read.
	required bytes block = 1;
	// Child trie to query. If absent, query the main trie.
	optional ChildTrieInfo child_trie_info = 2;
	// Keys to read with their options.
	repeated Key keys = 3;
	// Lower bound for returned keys (pagination). Keys <= this value are excluded.
	optional bytes only_keys_after = 4;
	// If true, ignore the last 4 bits (nibble) of only_keys_after.
	optional bool only_keys_after_ignore_last_nibble = 5;
}
